# GoogleAdsParser

./: .example.env  README.md  main.py  pyproject.toml  requirements.txt  start.py
configs/: device_schedule.json  prompt.md  region_emails.json
src/: app.py  config.py
src/core/: __init__.py  account_orchestrator.py  content_analyzer.py  data_interpreter.py  main_class.py  navigation_manager.py
src/elements/: __init__.py  nodes.py  selectors.py
src/models/: __init__.py  classification_result_dict.py  config_dict.py  coordinates_model.py  node_selector_dict.py
src/utils/: __init__.py  adb_manager.py  arg_manager.py  google_manager.py  log_manager.py  tesseract_manager.py
